styles.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    height: 100%;
    width: 100%;
    font-family: Arial, Helvetica, sans-serif;
}

header {
    width: 100%;
    height: 370px;
}

.hero-image {
        /* Use "linear-gradient" to add a darken background effect to the image. This will make the text easier to read */
    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("./assets/pexels-christina-morillo-1181467.jpg");
    height: 100%;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;
}

h1 {
    color: white;
    text-align: center;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    color: white;
}

ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    background-color: rgb(55, 64, 64);
}
  
li {
    float: left;
}
  
li a {
    display: block;
    color: white;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
}
  
li a:hover {
    background-color: lightgreen;
}

h2 {
    color: seagreen;
    text-align: center;
}

#about-me {
    padding-top: 20px;
    width: 100%;
}

p {
    line-height: 120%;
    padding: 40px 0px 0px 30px;
    vertical-align: middle;
}

#my-info {
    display: flex;
    padding: 10px 140px 30px 140px;
    vertical-align: middle;
}

#my-work{
    padding: 30px 100px 0px 100px;
    width: 100%;
    text-align: center;
    background-color: lightgrey;
}

#work-images {
    padding: 0px 50px 50px 30px;
    margin: auto;
}

#smaller-images {
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
    padding-top: 20px;
}

footer {
    text-align: center;
    background-color: rgb(55, 64, 64);
    padding: 20px 0px 20px 0px;
}

form {
    width: 100%;
    color: white;
}

input {
    width: 200px;
    padding: 8px 15px;
    margin: 8px 0;
    border-radius: 6px;
}

@media (max-width: 700px) {
    #smaller-images, 
    #workimages, 
    #my-info {
        flex 100%;
    }
}

